max-hieght max-width used for hero element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,10 +51,10 @@ p {
 }
 
 .hero {
-    height: 800px;
-    width: 100%;
+    max-height: 800px;
+    max-width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("./images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -188,13 +188,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
